Fix thread post form alignment.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -499,7 +499,7 @@ Posts
 
 .post-form#thread
 {
-    bottom: -330px;
+    bottom: -333px;
 }
 
 .post-form:hover,
